@@ -109,11 +109,11 @@ IW_EXPORT char* iwpool_strndup2(IWPOOL *pool, const char *str, size_t len);
  */
 IW_EXPORT char* iwpool_printf(IWPOOL *pool, const char *format, ...) __attribute__((format(__printf__, 2, 3)));
 
-IW_EXPORT char** iwpool_split_string(
+IW_EXPORT const char** iwpool_split_string(
   IWPOOL *pool, const char *haystack,
   const char *split_chars, bool ignore_whitespace);
 
-IW_EXPORT char** iwpool_printf_split(
+IW_EXPORT const char** iwpool_printf_split(
   IWPOOL *pool,
   const char *split_chars, bool ignore_whitespace,
   const char *format, ...) __attribute__((format(__printf__, 4, 5)));
